--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,61 @@
 * {
   padding: 0;
   margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+body {
+  background-color: beige;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+}
+
+header button {
+  padding: 8px;
+}
+
+.title {
+  font-size: x-large;
+  font-weight: bolder;
+}
+
+.playerButtonChoice {
+  display: flex;
+  justify-content: center;
+  gap: 18px;
+  flex: 1;
+  padding-top: 64px;
+}
+
+.playerButtonChoice button {
+  padding: 16px;
+  width: 8em;
+  height: 8em;
+}
+
+.resultContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 18px;
+  gap: 18px;
+  flex: 1;
+}
+
+.resultContainer button {
+  padding: 8px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  padding: 8px;
 }
